implementação do patch do grupo e post de grupo e lojas
