# src/routes/Interfaces/interfacesGroupsRoutes.ts
@@ -1,0 +1,5 @@
+export interface IParamsGetGroups {
+  nomeGrupo?: string
+  codGrupo?: string
+  nomeResponsavel?: string
+}
